@@ -135,6 +135,9 @@ Nehan.Env = (function(){
   };
 })();
 
+// current engine id
+Nehan.engineId = 0;
+
 // global style
 Nehan.style = {};
 
@@ -171,6 +174,9 @@ Nehan.addSingleTagByRex = function(rex){
 Nehan.setup = function(engine_args){
 "use strict";
 var __engine_args = engine_args || {};
+
+// each time setup is called, engine id is incremented.
+Nehan.engineId++;
 
 var Config = {
   lang:"ja-JP",
@@ -6024,7 +6030,7 @@ var DocumentContext = (function(){
       return (typeof __anchors[name] === "undefined")? null : __anchors[name];
     },
     genHeaderId : function(){
-      return __header_id++;
+      return [Nehan.engineId, __header_id++].join("-");
     },
     // this is shortcut function for __create_outline_elements_by_name("body", callbacks).
     // if many outline elements exists(that is, multiple '<body>' exists), use first one only.
